--- a/api/.env.example
+++ b/api/.env.example
@@ -10,22 +10,22 @@ LC_ALL=en_US.UTF-8
 PYTHONIOENCODING=utf-8
 
 # Console API base URL
-CONSOLE_API_URL=http://localhost:5001
+CONSOLE_API_URL=https://cloud.dify.ai
 CONSOLE_WEB_URL=http://localhost:3000
 
 # Service API base URL
-SERVICE_API_URL=http://localhost:5001
+SERVICE_API_URL=https://cloud.dify.ai
 
 # Web APP base URL
 APP_WEB_URL=http://localhost:3000
 
 # Files URL
-FILES_URL=http://localhost:5001
+FILES_URL=https://cloud.dify.ai
 
 # INTERNAL_FILES_URL is used for plugin daemon communication within Docker network.
 # Set this to the internal Docker service URL for proper plugin file access.
 # Example: INTERNAL_FILES_URL=http://api:5001
-INTERNAL_FILES_URL=http://127.0.0.1:5001
+INTERNAL_FILES_URL=https://cloud.dify.ai
 
 # The time in seconds after the signature is rejected
 FILES_ACCESS_TIMEOUT=300
